# ferrant

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: python-wheels.yml
.superpowers/sdd/: final-fixes-report.md
docs/superpowers/plans/: 2026-07-12-skills.md
docs/superpowers/specs/: 2026-07-12-skills-design.md
examples/: advanced_runtime.rs  advanced_workflow.rs  anthropic_agent.rs  basic_agent.rs  custom_tool.rs  mcp_agent.rs  multi_agent.rs  multimodal_input.rs  multimodal_output.rs  openai_compatible_agent.rs  skills_agent.rs
examples/coding-agent-cli/: Cargo.toml  README.md
examples/coding-agent-cli/src/: approval.rs  config.rs  main.rs  sandbox.rs  state.rs  tools.rs  workspace.rs
python-wrapper/: Cargo.toml  LICENSE  PUBLISHING.md  README.md  pyproject.toml
python-wrapper/examples/: advanced_runtime.py  advanced_workflow.py  anthropic_agent.py  basic_agent.py  custom_tool.py  document_extraction.py  mcp_agent.py  memory.py  multi_agent.py  multimodal_input.py  multimodal_output.py  openai_compatible_agent.py  rag.py  rag_document_extraction.py  streaming.py
python-wrapper/python/ferragent/: __init__.py
python-wrapper/python/ferrant/: __init__.py  __init__.pyi  cli.py
python-wrapper/python/liteagent/: __init__.py
python-wrapper/src/: lib.rs
python-wrapper/tests/: test_smoke.py
server/: README.md
server/deployment/: Dockerfile  app.py
server/docker/: Dockerfile
server/runtime/: ferrant_server.py
src/: agent.rs  cli.rs  error.rs  evaluation.rs  ferrant_server.py  graph.rs  integrations.rs  lib.rs  main.rs  mcp.rs  memory.rs  message.rs  observability.rs  orchestration.rs  persistence.rs  rag.rs  runtime.rs  skills.rs  structured.rs  tool.rs  tracing.rs  workflow.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
tests/: agent_observability.rs  graph_recovery.rs  live_integrations.rs  observability_evaluation.rs  provider_protocol.rs  rag_mature.rs  runtime_features.rs  skills.rs
