[package]
name = "liteagent-python"
version = "0.1.0"
edition = "2021"
publish = false
description = "Optional lightweight Python bindings for the Rust liteagent core"
license = "MIT"

[lib]
name = "liteagent_native"
crate-type = ["cdylib"]

[dependencies]
liteagent = { path = ".." }
pyo3 = { version = "0.29", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
