[package]
name = "ferragent-python"
version = "0.1.2"
edition = "2021"
publish = false
description = "Optional lightweight Python bindings for the Rust ferragent core"
license-file = "LICENSE"

[lib]
name = "ferragent_native"
crate-type = ["cdylib"]

[dependencies]
ferragent = { path = ".." }
pyo3 = { version = "0.29", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1"
anyhow = "1"
serde_json = "1"
