[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ferragent"
version = "0.1.1"
description = "Fast, lightweight AI agents powered by a Rust core"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["ai", "agents", "llm", "mcp", "rag", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[tool.maturin]
python-source = "python"
module-name = "ferragent._native"
bindings = "pyo3"
