[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ferrant"
version = "0.1.15"
description = "Fast, lightweight AI agents powered by a Rust core"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]
keywords = ["ai", "agents", "llm", "mcp", "rag", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.scripts]
ferrant = "ferrant.cli:main"

[tool.maturin]
python-source = "python"
module-name = "ferrant._native"
bindings = "pyo3"
